crates/forge_main/src/snapshots/forge_main__title_format__tests__single_char.snap
---
source: crates/forge_main/src/title_format.rs
expression: clean
snapshot_kind: text
---
╔═══╗
║ A ║
╚═══╝
